add intro to cloud storage post

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block recent %}
 <p><a href="./posts/parsingderivs.html">Parsing with Derivatives</a><br />
-<a href="./posts/expletive.html">Expletive</a><br />
+<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
 <a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
 <a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
 <a href="./posts/expect.html">Expect: The Unix Tool</a>  </p>
