change about page, add makefile, temporarily give up on homemaking staticjinja

--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -49,31 +49,27 @@ science.</p>
 <h1>Contact Info</h1>
 
 <div class="row featurette">
-  <div class="col-md-6 text-left">
-   <h4>Email</h4>
+  <div class="col-md-4 text-left">
+   <h4>Email</h4><a href="/publickey.asc">(pgp)</a>
    <address>
-    <a href="mailto:#"> bdevorem@nd.edu</a><br>
-    <a href="mailto:#"> breannamcd11@gmail.com</a><br>
-    <a href="mailto:#"> br33zyxr@gmail.com</a><br>
+    <a href="mailto:bdevorem@nd.edu"> bdevorem [at] nd [dot] edu</a><br>
+    <a href="mailto:breannamcd11@gmail.com"> breannamcd11 [at] gmail [dot] com</a><br>
+    <a href="mailto:br33zyxr@gmail.com"> br33zyxr [at] gmail [dot] com</a><br>
    </address>
  </div>
- <div class="col-md-6 text-left">
+ <div class="col-md-4 text-left">
   <h4>Snail Mail</h4>
    <address>
     <strong>Breanna Devore-McDonald</strong><br>
     211 Lewis Hall<br>
     Notre Dame, IN 46556<br>
    </address>
-  </div>
+  </div> 
+ <div class="col-md-4 text-left">
+  <h4>Links</h4>
+    <i class="fa-github" href="https://github.com/bdevorem"></i>
+ </div>
 </div>
-
-<h1>Links</h1>
-
-<h3><a href="https://github.com/bdevorem/">Github</a></h3>
-
-<p>Here, you will find some of my coding projects, including
-<a href="https://github.com/bdevorem/bdevorem.github.io">this blog</a> 
-and my <a href="http://bdevorem.herokuapp.com/">personal website</a>.  </p>
 
 <h3><a href="https://bitbucket.org/bdevorem">Bitbucket</a></h3>
 
