fix font awesome in about page

--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -50,7 +50,7 @@ science.</p>
 
 <div class="row featurette">
   <div class="col-md-4 text-left">
-   <h4>Email</h4><a href="/publickey.asc">(pgp)</a>
+   <h4>Email <a href="/publickey.asc">(pgp)</a></h4>
    <address>
     <a href="mailto:bdevorem@nd.edu"> bdevorem [at] nd [dot] edu</a><br>
     <a href="mailto:breannamcd11@gmail.com"> breannamcd11 [at] gmail [dot] com</a><br>
@@ -67,18 +67,10 @@ science.</p>
   </div> 
  <div class="col-md-4 text-left">
   <h4>Links</h4>
-    <i class="fa-github" href="https://github.com/bdevorem"></i>
+   <span class="fa fa-github" href="https://github.com/bdevorem"></span>
+   <span class="fa fa-bitbucket" href="https://bitbucket.org/bdevorem"></span>
+   <span class="fa fa-linkedin-square" href="https://www.linkedin.com/in/bdevorem"></span>
  </div>
 </div>
-
-<h3><a href="https://bitbucket.org/bdevorem">Bitbucket</a></h3>
-
-<p>Here, you probably won't find any coding projects. Private
-repostitories are sometimes nice, too.  </p>
-
-<h3><a href="https://www.linkedin.com/in/bdevorem">LinkedIn</a></h3>
-
-<p>Here, you will find my professional webpage. Don't be alarmed,
-it still has some character to it.  </p>
 
 {% endblock %}
