finally adding correct hrefs to about page links

--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -67,9 +67,9 @@ science.</p>
   </div> 
  <div class="col-md-3 text-left">
   <h4>Links</h4>
-   <i class="fa fa-github" href="https://github.com/bdevorem"></i>
-   <span class="fa fa-bitbucket" href="https://bitbucket.org/bdevorem"></span>
-   <span class="fa fa-linkedin-square" href="https://www.linkedin.com/in/bdevorem"></span>
+   <a href="https://github.com/bdevorem"><i class="fa fa-github"></i></a>
+   <a href="https://bitbucket.org/bdevorem"><i class="fa fa-bitbucket"></i></a>
+   <a href="https://www.linkedin.com/in/bdevorem"><i class="fa fa-linkedin-square"></i></a>
  </div>
 </div>
 
