last spacing issue

--- a/posts/templates/playlist.html
+++ b/posts/templates/playlist.html
@@ -35,9 +35,9 @@ Kooks and Hozier. Can't forget the soulful Rationale, as well!  </p>
 <a href="https://www.youtube.com/watch?v=N9XKLqGqwLA">Realiti</a> - Grimes <br />
 <a href="https://www.youtube.com/watch?v=-7PINAYE4z4">Tap Out</a> - The Strokes <br />
 <a href="https://www.youtube.com/watch?v=BfOdWSiyWoc">Can't Stop</a> - Red Hot Chili Peppers <br />
-<a href="https://www.youtube.com/watch?v=vMpeX0W6LTE">Send Me Down</a> - Haim
-<a href="https://www.youtube.com/watch?v=5_JUReD3QoE">Sedated</a> - Hozier
-<a href="https://www.youtube.com/watch?v=VpT-6SQFx2g">Something From Nothing</a> - Rationale
-<a href="https://www.youtube.com/watch?v=NghU2kMcepQ">Mellow Yellow</a> - Ocean Alley</p>
+<a href="https://www.youtube.com/watch?v=vMpeX0W6LTE">Send Me Down</a> - Haim <br />
+<a href="https://www.youtube.com/watch?v=5_JUReD3QoE">Sedated</a> - Hozier <br />
+<a href="https://www.youtube.com/watch?v=VpT-6SQFx2g">Something From Nothing</a> - Rationale <br />
+<a href="https://www.youtube.com/watch?v=NghU2kMcepQ">Mellow Yellow</a> - Ocean Alley  </p>
 
 {% endblock %}
