add an unfinished tag, add ron fagin and latex skeletons

--- a/posts/templates/cloudstorage.html
+++ b/posts/templates/cloudstorage.html
@@ -11,8 +11,9 @@ about computer networking, and I never imagined myself spending
 to the current time, where I am so close to file level storage that 
 I actually have to consult an engineer that implemented some 
 major capabilities of the NetApp filers, because documentation 
-only reaches so far. <br />
-Well, what exactly <em>is</em> file level storage? If there's a <em>file</em> 
+only reaches so far.  </p>
+
+<p>Well, what exactly <em>is</em> file level storage? If there's a <em>file</em> 
 protocol, are there other protocols? Why do we need more than 
 one storage protocol? And what is this 'NetApp' filer I 
 mentioned? Let's get into it.</p>
