--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,10 @@
 		<hr>
 		<h2> Random </h2>
 		{% block random %}{% endblock %}
+		<hr>
+		<h2> Unfinished </h2>
+		{% block unfinished %}{% endblock %}
+
 	</div>
       	{% block footer %}
     		<footer class="footer">
