add links to gens

--- a/posts/templates/staticsitegenerator.html
+++ b/posts/templates/staticsitegenerator.html
@@ -50,25 +50,26 @@ you want to choose a static site generator. Well, there are
 so many options. Here are the top generators that I looked 
 into when designing my site:  </p>
 
-<h4>Jekyll</h4>
+<h4><a href="https://jekyllrb.com/">Jekyll</a></h4>
 
-<h4>Acrylamid</h4>
+<h4><a href="https://gohugo.io/">Hugo</a></h4>
 
-<h4>Hugo</h4>
+<h4><a href="https://hexo.io/">Hexo</a></h4>
 
-<h4>Hyde</h4>
+<h4><a href="http://hyde.github.io/">Hyde</a></h4>
 
-<h4>Hexo</h4>
+<h4><a href="http://blog.getpelican.com/">Pelican</a></h4>
 
-<h4>Nikola</h4>
+<h4><a href="https://getnikola.com/">Nikola</a></h4>
 
-<h4>Pelican</h4>
+<h4><a href="https://posativ.org/acrylamid/">Acrylamid</a></h4>
 
 <h2>Creating You Own Static Site Generator</h2>
 
 <p>If you have a very specific goal in mind, or none of those 
 generators really do what you want, or you just feel trapped 
-without custimization (love you Arch Linux), you may 
+without customization (love you 
+<a href="https://www.archlinux.org/">Arch Linux</a>), you may 
 just want to make your own. It may sound like a big feat or 
 too complicated to even bother trying, but making a static 
 site generator is actually really straightforward. </p>
